# asid-predict

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
notebooks/: sample.ipynb
src/asid_predict/: __init__.py  config.py  dataclass.py  training.py
src/asid_predict/data/: coast_points.json  predict_points.json
src/asid_predict/data_processing/: __init__.py  data_file_loader.py  interpolation.py  train_record_generator.py
src/asid_predict/models/: __init__.py  generate_model_input.py  normalization.py  predict_model.py
src/asid_predict/prediction/: __init__.py  predictor.py
src/asid_predict/utils/: __init__.py  earthquake.py  geo.py
