[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "asid_predict"
version = "12.1.0"
description = "深発地震に対応した震度予測モデル学習用プログラム"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "kotoho7" }]
dependencies = ["keras>=3.0.0", "numpy", "pydantic", "pykrige"]

[project.urls]
Homepage = "https://github.com/kotoho7/asid-predict"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.package-data]
"asid_predict" = ["data/*.json"]
